# ep-parity

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  comparison_config.ini  docker-compose.yml  paths_config.ini.example  pyproject.toml
ep_parity/: __main__.py
ep_parity/cli/: common.py  compare_cmd.py  config_cmd.py  export_cmd.py  init_cmd.py  main.py  monitor_cmd.py  report_cmd.py  validate_cmd.py
ep_parity/core/: config.py  database.py  exporter.py
ep_parity/core/comparison/: __init__.py  activities_comparator.py  base_comparator.py  eligibility_comparator.py  engine.py  generic_comparator.py  issues_comparator.py  report_writer.py
ep_parity/core/monitoring/: __init__.py  base_monitor.py  db_monitor.py  sqs_monitor.py
ep_parity/core/reporting/: excel_summary.py
ep_parity/utils/: logging.py  runner.py
tests/: conftest.py
tests/unit/: test_config.py  test_config_cmd.py  test_database_errors.py  test_exporter.py  test_init_cmd.py  test_runner.py
tests/unit/comparison/: test_base_comparator.py  test_engine.py
